--- a/examples/first_steps.ipynb
+++ b/examples/first_steps.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Model\n",
+    "## The model\n",
     "With the principle of keeping Hobbit flexible we completely define the model we want to train inside a function which we call `my_model()`. This function takes a **dictionary of hyperparameters** `hparams` as its only argument and returns a **compiled Keras model**. Every model we train will follow this template and they will differ only in the values of the hyperparameters and how long they were trained.\n",
     "\n",
     "Every optimizable hyperparameter within `my_model()` corresponds to one of the values defined before as a Hyperparameter object. Here we will specify where each hyperparameter goes and we will access it from the `hparams` dictionary like this \n",
@@ -50,7 +50,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -83,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Dataset\n",
+    "# The dataset\n",
     "The dataset is loaded as a tuple of training and validation objects. These objects are usually numpy arrays with each sample as a row and each column as a feature. If there is some preprocessing for the data it has to be done before passing it to Hobbit. Here we load the MNIST dataset using Keras and do some simple preprocessing."
    ]
   },
@@ -111,7 +113,7 @@
     "y_train = keras.utils.np_utils.to_categorical(y_train, num_classes)\n",
     "y_test = keras.utils.np_utils.to_categorical(y_test, num_classes)\n",
     "\n",
-    "my_dataset = (x_train, y_train), (x_test, y_test)"
+    "train_dataset, valid_dataset = (x_train, y_train), (x_test, y_test)"
    ]
   },
   {
@@ -132,7 +134,8 @@
    "source": [
     "from hobbit.algorithms import Hyperband\n",
     "hband = Hyperband(model_function=my_model,\n",
-    "                  dataset=my_dataset,\n",
+    "                  dataset=train_dataset,\n",
+    "                  validation_data=valid_dataset,\n",
     "                  hparam_ranges=my_hparam_ranges,\n",
     "                  repo_dir='./my_test_repo')"
    ]
@@ -179,7 +182,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -573,7 +578,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -742,50 +749,6 @@
    "source": [
     "tab"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using a Generator\n",
-    "Let's say you want to stream data using a generator. In that case you need to pass the function that returns a generator (not the generator object itself) to `generator_function`. You can pass a tuple if you need two different generator functions for training and testing. If they are just different by their arguments you can pass the relevant arguments via `train_gen_args` and `valid_gen_args` which accept either a dictionary or list/tuple. Hobbit also needs the number of steps / batches in training / testing. You pass these via `steps_per_epoch` and `validation_steps` similarly as in Keras."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def example_generator(x, y, batch_size=100):\n",
-    "    num_samples = y.shape[0]\n",
-    "    num_batches = np.ceil(num_samples/batch_size).astype('int')\n",
-    "    while True:\n",
-    "        for i in range(num_batches):\n",
-    "            from_ = i*batch_size\n",
-    "            to_ = min((i+1)*batch_size, num_samples)\n",
-    "            yield x[from_:to_], y[from_:to_]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "hband = Hyperband(model_function=my_model,\n",
-    "                  hparam_ranges=my_hparam_ranges,\n",
-    "                  repo_dir='./my_test_repo',\n",
-    "                  generator_function=example_generator,\n",
-    "                  train_gen_args=(x_train, y_train, 100),\n",
-    "                  valid_gen_args=(x_test, y_test, 100),\n",
-    "                  steps_per_epoch=x_train.shape[0]//100,\n",
-    "                  validation_steps=x_test.shape[0]//100)"
-   ]
   }
  ],
  "metadata": {
@@ -797,16 +760,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
