gpyopt wrapper added + tested

--- a/examples/mnist_mlp.ipynb
+++ b/examples/mnist_mlp.ipynb
@@ -39,6 +39,7 @@
     "\"\"\"\n",
     "from __future__ import print_function\n",
     "import sherpa\n",
+    "import sherpa.algorithms.bayesian_optimization as bayesian_optimization\n",
     "import time\n",
     "import keras\n",
     "from keras.models import Sequential\n",
@@ -110,7 +111,9 @@
    },
    "outputs": [],
    "source": [
-    "algorithm = sherpa.algorithms.BayesianOptimization(max_num_trials=50)"
+    "algorithm = bayesian_optimization.GPyOpt(max_concurrent=1,\n",
+    "                                           model_type='GP_MCMC',\n",
+    "                                           acquisition_type='EI_MCMC')"
    ]
   },
   {
