corrected messages inside notebook

--- a/examples/keras_mnist_mlp_population_based_training.ipynb
+++ b/examples/keras_mnist_mlp_population_based_training.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -100,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make a temporary directory to store model files in. Successive Halving tries hyperparameter configurations for bigger and bigger budgets (training epochs). Therefore, intermediate models have to be saved."
+    "Make a temporary directory to store model files in. Population based training jointly optimizes a population of models and their hyperparameters. To train all models *at the same time* we train each model for one epoch (or more if you like), save it (using *trial.parameters['save_to']*), and load it again at a later time when needed (using *trial.parameters['load_from']*). For this reason, we need a directory to save these models in."
    ]
   },
   {
@@ -119,7 +121,7 @@
    "metadata": {},
    "source": [
     "### Hyperparameter Optimization\n",
-    "**Note**: we manually infer the number of epochs that the model has trained for so we can give this information to Keras."
+    "Technically Population Based Training could go on forever, training ever more generations. In reality however we would like to stop at some point. For this reason we set a *max_num_generations*. You can set this to the number of epochs that you would normally train the model for. Here, we choose something small to speed up the example."
    ]
   },
   {
@@ -507,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are plots of the evoluation of validation accuracy and log learning rates. Lines of equal color indicate that these belong to equal seed trials."
+    "These are plots of the evolution of validation accuracy and log learning rates. Lines of equal color indicate that these belong to equal seed trials, that is they stem from the same population member from the first generation."
    ]
   },
   {
