change pbt tutorial to notebook; add asha tutorial

--- a/examples/keras_mnist_mlp_population_based_training.ipynb
+++ b/examples/keras_mnist_mlp_population_based_training.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Population Based Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background\n",
+    "Population Based Training (PBT) as introduced by Jaderberg et al. 2017\n",
+    "is an evolutionary algorithm for hyperparameter search. The diagram below is\n",
+    "taken from Jaderberg et al. 2017 and gives an intuition on the algorithm. It\n",
+    "starts with a random population of hyperparamater\n",
+    "configurations. Each population member is trained for a limited amount\n",
+    "of time and evaluated. When every population member has been evaluated,\n",
+    "the ones with low scores replace their own weights and hyperparameters\n",
+    "with those from population members with high scores (exploit) and\n",
+    "perturb the hyperparameters (explore). Then all population members are\n",
+    "trained and evaluated again and the process repeats. This process achieves a\n",
+    "joint optimization of the model parameters and training hyperparameters.\n",
+    "   \n",
+    "![PBT Diagram from Jaderberg et al. 2017](pbt.png \"PBT Diagram from Jaderberg et al. 2017\")\n",
+    "\n",
+    "Note that only parameters can be tuned that can be changed during training. The\n",
+    "number of layers in a neural network for example is better tuned with e.g. the\n",
+    "[GPyOpt Algorithm](keras_mnist_mlp.ipynb)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 119,
    "metadata": {
@@ -8,25 +39,6 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "SHERPA is a Python library for hyperparameter tuning of machine learning models.\n",
-    "Copyright (C) 2018  Lars Hertel, Peter Sadowski, and Julian Collado.\n",
-    "\n",
-    "This file is part of SHERPA.\n",
-    "\n",
-    "SHERPA is free software: you can redistribute it and/or modify\n",
-    "it under the terms of the GNU General Public License as published by\n",
-    "the Free Software Foundation, either version 3 of the License, or\n",
-    "(at your option) any later version.\n",
-    "\n",
-    "SHERPA is distributed in the hope that it will be useful,\n",
-    "but WITHOUT ANY WARRANTY; without even the implied warranty of\n",
-    "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n",
-    "GNU General Public License for more details.\n",
-    "\n",
-    "You should have received a copy of the GNU General Public License\n",
-    "along with SHERPA.  If not, see <http://www.gnu.org/licenses/>.\n",
-    "\"\"\"\n",
     "import sherpa\n",
     "import keras\n",
     "from keras.models import Sequential, load_model\n",
@@ -47,7 +59,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset Preparation"
+    "## Dataset Preparation\n",
+    "Training data is normalized to the [0, 1] range."
    ]
   },
   {
@@ -66,7 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sherpa Setup"
+    "## Sherpa Setup\n",
+    "We define one hyperparameter `learning_rate`. The algorithms uses a `population_size` of 5. This means the first 5 trials returned by the algorithm are randomly sampled. Each is trained by the user for say one epoch. This is the first generation. After that the 4 best out of these five are returned one after another (the top 80%). The fifth one (bottom 20%) is resampled from the top 20% (here just the best trial from generation 1) and its parameters are perturbed. For perturbation the parameter, here the `learning_rate` is randomly multiplied by 0.8 or 1.2 (as defined by the `perturbation_factors`). After that the next generation evolves in a similar way. The algorithm stops after `num_generations` generations."
    ]
   },
   {
@@ -89,9 +103,10 @@
    ],
    "source": [
     "parameters = [sherpa.Continuous('learning_rate', [1e-4, 1e-2], 'log')]\n",
-    "algorithm = alg = sherpa.algorithms.PopulationBasedTraining(population_size=5,\n",
-    "                                                            parameter_range={'learning_rate': [1e-6, 1e-1]},\n",
-    "                                                            perturbation_factors=(0.8, 1.2))\n",
+    "algorithm = sherpa.algorithms.PopulationBasedTraining(population_size=5,\n",
+    "                                                      num_generations=5,\n",
+    "                                                      perturbation_factors=(0.8, 1.2),\n",
+    "                                                      parameter_range={'learning_rate': [1e-6, 1e-1]})\n",
     "study = sherpa.Study(parameters=parameters,\n",
     "                     algorithm=algorithm,\n",
     "                     lower_is_better=False,\n",
@@ -120,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hyperparameter Optimization\n",
+    "## Hyperparameter Optimization\n",
     "Technically Population Based Training could go on forever, training ever more generations. In reality however we would like to stop at some point. For this reason we set a *max_num_generations*. You can set this to the number of epochs that you would normally train the model for. Here, we choose something small to speed up the example."
    ]
   },
@@ -388,18 +403,10 @@
     }
    ],
    "source": [
-    "max_num_generations = 5\n",
-    "\n",
     "for trial in study:\n",
-    "    \n",
-    "\n",
     "    generation = trial.parameters['generation']\n",
     "    load_from = trial.parameters['load_from']\n",
     "    training_lr = trial.parameters['learning_rate']\n",
-    "    \n",
-    "    # Train for a maximum of max_num_generations generations, that is max_num_generations epochs here\n",
-    "    if generation > max_num_generations:\n",
-    "        break\n",
     "    \n",
     "    print(\"-\"*100)\n",
     "    print(\"Generation {}\".format(generation))\n",
