--- a/examples/keras_mnist_mlp_successive_halving.ipynb
+++ b/examples/keras_mnist_mlp_successive_halving.ipynb
@@ -1,30 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Asynchronous Successive Halving (ASHA)\n",
+    "Successive halving is an algorithm based on the multi-armed bandit methodology. The ASHA algorithm is a way to combine random search with principled early stopping in an asynchronous way. We highly recommend this blog post by the authors of this method: https://blog.ml.cmu.edu/2018/12/12/massively-parallel-hyperparameter-optimization/ ."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "SHERPA is a Python library for hyperparameter tuning of machine learning models.\n",
-    "Copyright (C) 2018  Lars Hertel, Peter Sadowski, and Julian Collado.\n",
-    "\n",
-    "This file is part of SHERPA.\n",
-    "\n",
-    "SHERPA is free software: you can redistribute it and/or modify\n",
-    "it under the terms of the GNU General Public License as published by\n",
-    "the Free Software Foundation, either version 3 of the License, or\n",
-    "(at your option) any later version.\n",
-    "\n",
-    "SHERPA is distributed in the hope that it will be useful,\n",
-    "but WITHOUT ANY WARRANTY; without even the implied warranty of\n",
-    "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n",
-    "GNU General Public License for more details.\n",
-    "\n",
-    "You should have received a copy of the GNU General Public License\n",
-    "along with SHERPA.  If not, see <http://www.gnu.org/licenses/>.\n",
-    "\"\"\"\n",
     "import sherpa\n",
     "import sherpa.algorithms.bayesian_optimization as bayesian_optimization\n",
     "import keras\n",
@@ -41,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset Preparation"
+    "## Dataset Preparation"
    ]
   },
   {
@@ -60,8 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sherpa Setup\n",
-    "For the Successive Halving parameters it is useful to check out this blog post by the authors of this method: https://blog.ml.cmu.edu/2018/12/12/massively-parallel-hyperparameter-optimization/ .\n",
+    "## Sherpa Setup\n",
     "In this example we use $R=9$ and $\\eta=3$. That means to obtain one finished configuration we will train 9 configurations for 1 epochs, pick 3 configurations of those and train for 3 more epochs, then pick one out of those and train for another 9 epochs. You can increase the *max_finished_configs* argument to do a larger search."
    ]
   },
@@ -116,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hyperparameter Optimization\n",
+    "## Hyperparameter Optimization\n",
     "**Note**: we manually infer the number of epochs that the model has trained for so we can give this information to Keras."
    ]
   },
@@ -281,13 +271,7 @@
       "Loading model from:  /var/folders/5v/l788ch2j7tg0q0y1rt04c08w0000gn/T/tmpa7vbw5xz/11 ...\n",
       "\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 5s 77us/step - loss: 0.0466 - acc: 0.9850\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "60000/60000 [==============================] - 5s 77us/step - loss: 0.0466 - acc: 0.9850\n",
       "10000/10000 [==============================] - 1s 60us/step\n",
       "Validation accuracy:  0.973\n",
       "Epoch 6/6\n",
@@ -454,15 +438,6 @@
     "# Remove model_dir\n",
     "shutil.rmtree(model_dir)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
